# math-parser

./: CMakeLists.txt  LICENSE  main.c  parser
src/: lexer.c  lexer.h  main.c  parser.c  parser.h
